# server/cmd/server/wire_gen.go
@@ -40,8 +40,11 @@ func wireApp(confServer *conf.Server, confData *conf.Data, security *conf.Securi
 	auditRepo := data.NewAuditRepo(dataData)
 	partnerUsecase := biz.NewPartnerUsecase(partnerRepo, auditRepo)
 	partnerService := service.NewPartnerService(partnerUsecase)
-	grpcServer := server.NewGRPCServer(confServer, authService, partnerService, authUsecase, sessionPolicy, logger)
-	httpServer := server.NewHTTPServer(confServer, authService, partnerService, authUsecase, sessionPolicy, dataData, logger)
+	adminRepo := data.NewAdminRepo(dataData)
+	adminUsecase := biz.NewAdminUsecase(adminRepo, auditRepo)
+	adminService := service.NewAdminService(adminUsecase)
+	grpcServer := server.NewGRPCServer(confServer, authService, partnerService, adminService, authUsecase, sessionPolicy, logger)
+	httpServer := server.NewHTTPServer(confServer, authService, partnerService, adminService, authUsecase, sessionPolicy, dataData, logger)
 	app := newApp(logger, grpcServer, httpServer)
 	return app, func() {
 		cleanup()
