# server/internal/server/grpc.go
@@ -4,6 +4,7 @@ import (
 	"log/slog"
 
 	"github.com/go-kratos/kratos/contrib/otel/v3/tracing"
+	adminv1 "github.com/roncin/roncin-go-admin/server/api/admin/v1"
 	authv1 "github.com/roncin/roncin-go-admin/server/api/auth/v1"
 	partnerv1 "github.com/roncin/roncin-go-admin/server/api/partner/v1"
 	"github.com/roncin/roncin-go-admin/server/internal/biz"
@@ -16,7 +17,7 @@ import (
 )
 
 // NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Server, auth *service.AuthService, partner *service.PartnerService, authUsecase *biz.AuthUsecase, policy *biz.SessionPolicy, logger *slog.Logger) *grpc.Server {
+func NewGRPCServer(c *conf.Server, auth *service.AuthService, partner *service.PartnerService, admin *service.AdminService, authUsecase *biz.AuthUsecase, policy *biz.SessionPolicy, logger *slog.Logger) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
@@ -38,5 +39,6 @@ func NewGRPCServer(c *conf.Server, auth *service.AuthService, partner *service.P
 	srv := grpc.NewServer(opts...)
 	authv1.RegisterAuthServiceServer(srv, auth)
 	partnerv1.RegisterPartnerServiceServer(srv, partner)
+	adminv1.RegisterAdminServiceServer(srv, admin)
 	return srv
 }
